# flutter_engine

./: .gitignore  0001-web.patch  BUILD.gn  DEPS  DEPS_ohos  LICENSE_HW  LICENSE_KHZG  OAT.xml  README.OpenSource  README.en.md  README.md
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
.github/workflows/: scorecards-analysis.yml  third_party_scan.yml
attachment/: .prettierrc
attachment/repos/: angle.patch  build-3.22.patch3  build-3.22.patch4  build-3.22.patch5  build.patch  build_ohos_opt.patch  dart.patch0  dart.patch2  dart.patch3  dart.patch4  dart.patch7  dart.patch8  dart.patch9  flutter3.27-angle.patch  flutter3.27-boringssl.patch  flutter3.27-build.patch  flutter3.27-dart.patch  flutter3.27-dart.patch2  flutter3.27-libcxx.patch  flutter3.27-libcxxabi.patch  flutter3.27-native.patch  flutter3.27-native.patch2  skia.patch  (+9 more)
common/: config.gni  settings.cc  settings.h
display_list/: dl_builder.cc  dl_color.h
flow/: BUILD.gn  compositor_context.cc  raster_cache.cc  raster_cache_unittests.cc  stopwatch_dl.cc  view_slicer.cc
flutter_vma/: flutter_vma.h
fml/: BUILD.gn  log_level.h  logging.cc  logging.h  logging_unittests.cc  message_loop_impl_unittests.cc  status_or.h  trace_event.cc  trace_event.h
runtime/: BUILD.gn  dart_isolate.cc  dart_isolate_unittests.cc  dart_vm.cc  dart_vm_initializer.cc  platform_data.cc  platform_data.h  runtime_controller.cc  runtime_controller.h
shell/: config.gni
shell/platform/ohos/config/: BUILD.gn
skia/: BUILD.gn
testing/: testing.gni
tools/: gn
vulkan/: vulkan_window.cc
(+543 files in other folders)
