# Copyright (c) 2023 Hunan OpenValley Digital Industry Development Co., Ltd. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE_KHZG file.

#import("//build/config/linux/pkg_config.gni")
import("//flutter/shell/platform/glfw/config.gni")
